# ModelForge

./: .env.example  .gitignore  Makefile  README.md  nginx.conf
backend/: .dockerignore  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
backend/apps/api/: main.py
backend/apps/worker/: dev.py  main.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 0001_init_schema.py  0002_add_eval_platform_extensions.py  0002_add_eval_templates.py  0003_add_eval_template_type_fields.py  0003_eval_v2_architecture.py  0004_eval_v2_leaderboards.py  0004_remove_legacy_benchmark_catalog_entries.py  0005_add_benchmark_leaderboards.py  0005_eval_spec_dataset_files.py  0006_probe_system.py  6b98732bbb08_init_schema.py  a5f0c9b3d1e2_add_model_providers.py  a9b8c7d6e5f4_add_benchmark_contract_fields.py  ab12cd34ef56_add_lake_assets.py  b1c2d3e4f5a6_merge_benchmark_and_eval_heads.py  c2d3e4f5a6b7_add_benchmark_metadata_columns.py  c4f2b6a7e9d1_fix_model_registry_sync_timestamps.py  c8b4e7d2a1f0_add_benchmark_fields_to_eval_jobs.py  d3d1f8a1b4c2_expand_dataset_schema.py  d3e4f5a6b7c8_seed_builtin_benchmark_metadata.py  e4f5a6b7c8d9_add_eval_collections.py  e4f6c9a1d2b3_persist_eval_job_runtime_fields.py  f1c2d3e4b5a6_create_benchmark_catalog_tables.py  f5a6b7c8d9e0_add_field_mapping_json.py  f7a8c9d0e1f2_add_judge_prompt_to_eval_jobs.py  f9a1b2c3d4e5_add_eval_job_progress_and_cancel.py
backend/tests/: test_benchmark_catalog_service.py  test_benchmark_leaderboard_service.py  test_dataset_import_activities.py  test_eval_engine.py  test_eval_job_schema.py  test_eval_job_service.py  test_evalscope_executor.py  test_evaluation_leaderboard_v2_service.py  test_evaluation_v2_service.py  test_model_registry_service.py  test_probe_service.py  test_resource_id_guards.py  test_storage_layout.py
backend/tests/eval_core/: test_cl_bench.py  test_general_mcq.py  (+8 more)
probe/: README.md  pyproject.toml
probe/tests/: test_executor.py
(+394 files in other folders)
