[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "nta-probe-agent"
version = "0.1.0"
description = "Standalone probe agent for NTA Platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "evalscope>=1.5.2.post1",
  "httpx>=0.27.2",
  "pydantic>=2.11.0",
]

[project.scripts]
nta-probe-agent = "nta_probe_agent.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nta_probe_agent"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
